--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,6 @@ spring.datasource.username=rootsqlcon
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jackson.serialization.INDENT_OUTPUT=true
+
